Subindo teste de performance k6
